--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: lightblue;
 }
+header{
+    padding-bottom: 40px;
+}
 
 nav {
     position: fixed;
@@ -38,3 +41,8 @@ nav {
     margin-left: 15px;
     margin-right: 15px;
 }
+
+section:not(:target){
+    display: none;
+}
+
