--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 body {
-    background-color: lightblue;
+    background-color: lightskyblue;
+    height: 100%;
+    width: 100%;
 }
 header{
     padding-bottom: 40px;
 }
-
+.footer{
+    width: 100%;
+    border-radius: 20px;
+    position: fixed;
+    background-color: red;
+}
 nav {
     position: fixed;
     border-radius: 20px;
@@ -28,6 +35,7 @@ nav {
     margin-left: 15px;
     margin-right: 15px;
 }
+
 .liennav {
     color: rgb(238, 234, 15);
     border-radius: 20px;
@@ -45,4 +53,8 @@ nav {
 section:not(:target){
     display: none;
 }
-
+section:target{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
