--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: lightskyblue;
     height: 100%;
     width: 100%;
+    background: linear-gradient(90deg, rgb(3, 3, 104),white,red);
 }
 header{
     padding-bottom: 60px;
@@ -12,31 +13,32 @@ footer{
     position: fixed;
     bottom: 0px;
     left: 0px;
-    background-color: red;
-    box-shadow: 0px -5px 2.5px rgb(150, 13, 13);
+    background-color: rgba(255, 0, 0, 0);
 }
 main {
     margin-bottom: 40px;
-    margin-left: 50vh;
-    margin-right: 50vh;
-    background-color: rgba(255, 255, 255, 0.562);
+    margin-left: 60vh;
+    margin-right: 60vh;
+    background-color: rgba(255, 255, 255, 0);
 }
 nav {
     position: fixed;
     border-radius: 20px;
     width: 100%;
     text-align: center;
-    background-color:rgb(218, 15, 15) ;
+    background-color:rgba(218, 15, 15, 0) ;
     display: flex;
     justify-content: space-between;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    box-shadow: 0px 5px 5px rgb(150, 13, 13);
+    margin-bottom: 15px;
 }
 
 .skill{
-    padding-top: 20px;
+    -webkit-appearance: none;
+    font-size:30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 5px 5px grey;
 }
+/*
 .liennav {
     color: rgb(238, 234, 15);
     border-radius: 20px;
@@ -50,6 +52,23 @@ nav {
     margin-left: 15px;
     margin-right: 15px;
     box-shadow: 0px 0px 5px 7.5px rgb(255, 255, 255);
+}
+*/
+.liennav {
+    color: rgb(0, 0, 0);
+    display: inline-block;;
+    padding-bottom: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 20px;
+    background-color:rgba(4, 4, 122, 0) ;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+}
+.liennav:hover{
+    border-bottom: solid;
+    border-top: solid;
 }
 
 section:not(:target){
