--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ header{
     padding-bottom: 60px;
 }
 footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
     border-radius: 20px;
     position: fixed;
@@ -88,4 +91,8 @@ section:target{
 .subAcc {
     font-style:italic;
     text-decoration:underline;
+}
+.portrait{
+    border-radius: 30px;
+    box-shadow: 0px 0px 5px 7.5px rgb(249, 253, 0)
 }
