--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,27 @@ nav {
     justify-content: space-between;
     margin-bottom: 15px;
 }
+progress{
+    -webkit-appearance: none;
+}
 
 .skill{
-    -webkit-appearance: none;
     font-size:30px;
     margin-bottom: 10px;
+    border-radius: 20px;
     box-shadow: 0px 5px 5px grey;
 }
+
+#redbar::-moz-progress-bar {
+    background:linear-gradient(90deg,rgb(0, 87, 250),magenta) ;
+    border-radius: 20px;
+}
+
+::-webkit-progress-value {
+    background-color: orange;
+}
 /*
+
 .liennav {
     color: rgb(238, 234, 15);
     border-radius: 20px;
